gcp: hardcode ip

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 /target
 .idea
+/out
+static/potato-shooter.d.ts
+static/potato-shooter.js
+static/potato-shooter_bg.wasm
+static/potato-shooter_bg.wasm.d.ts
