tut3 - https://johanhelsing.studio/posts/extreme-bevy-3

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ bevy = "0.13.2"
 bevy_ggrs = { version = "0.15", features = ["wasm-bindgen"] }
 bevy_matchbox = { version = "0.9", features = ["ggrs"] }
 dotenv = "0.15.0"
+bevy_asset_loader = "0.20.2"
 
 [profile.dev.package."*"]
 opt-level = 2
