--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,5 @@
 [target.wasm32-unknown-unknown]
 runner = "wasm-server-runner"
 
-[build]
-target = "wasm32-unknown-unknown"
+#[build]
+#target = "wasm32-unknown-unknown"
