tut4 - https://johanhelsing.studio/posts/extreme-bevy-4

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ bevy_matchbox = { version = "0.9", features = ["ggrs"] }
 dotenv = "0.15.0"
 bevy_asset_loader = "0.20.2"
 clap = { version = "4.4", features = ["derive"] }
+bevy_roll_safe = "0.2"
+bevy_egui = { version = "0.27.1", default-features = false, features = ["open_url", "default_fonts", "render"] }
 
 [profile.dev.package."*"]
 opt-level = 2
