--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ dotenv = "0.15.0"
 bevy_asset_loader = "0.20.2"
 clap = { version = "4.4", features = ["derive"] }
 bevy_roll_safe = "0.2"
-bevy_egui = { version = "0.27.1", default-features = false }
+bevy_egui = { version = "0.27.1", default-features = false, features = ["open_url", "default_fonts", "render"] }
 rand = "0.8.5"
 rand_xoshiro = "0.6.0"
 
